kubernetes: Fix connection dialog alignment
Fixes #6477
Closes #6483

--- a/pkg/kubernetes/styles/dashboard.less
+++ b/pkg/kubernetes/styles/dashboard.less
@@ -102,3 +102,7 @@ code {
     font-size: 13px;
     margin-bottom: 1em;
 }
+
+.form-table-ct label span[translate] {
+    vertical-align: top;
+}
